gccida/g2/scan_loop
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1083:4: error: expected ';' after expression
rtx v10; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1083:5: error: use of undeclared identifier 'v10'
rtx v10; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1085:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1085:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1086:4: error: expected ';' after expression
rtx v13; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1086:5: error: use of undeclared identifier 'v13'; did you mean 'v11'?
rtx v13; // r12 
    ^~~
    v11
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1084:7: note: 'v11' declared here
void *v11; // r14 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1087:4: error: expected ';' after expression
rtx v14; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1087:5: error: use of undeclared identifier 'v14'; did you mean 'v11'?
rtx v14; // rax 
    ^~~
    v11
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1084:7: note: 'v11' declared here
void *v11; // r14 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1090:4: error: expected ';' after expression
rtx v17; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1090:5: error: use of undeclared identifier 'v17'
rtx v17; // r8 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1095:4: error: expected ';' after expression
rtx v22; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1095:5: error: use of undeclared identifier 'v22'
rtx v22; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1102:4: error: expected ';' after expression
rtx v29; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1102:5: error: use of undeclared identifier 'v29'
rtx v29; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1109:4: error: expected ';' after expression
rtx cont; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1109:5: error: use of undeclared identifier 'cont'
rtx cont; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1110:4: error: expected ';' after expression
rtx v37; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1110:5: error: use of undeclared identifier 'v37'
rtx v37; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/loop.c:1111:4: error: expected ';' after expression
rtx v38; // r12 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_loop/src/obj/loop.o] Error 1
